[metadata]
name = faamasd
version = 0.1
author = Erin Raif
author_email = eeenr@leeds.ac.uk
description = Using FAAM datasets to get aerosol-size info
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/erin-raif/aerosol_size_for_faam_data

classifiers =
    Programming Language :: Python :: 3

[options]
packages=find:
    matplotlib>=3.5.0
    netcdf4>=1.6.0
    numpy>=1.6.0
    pandas>=1.4.3
    scipy>=1.4.1
    xarray>=2022.6.0
    
python_requires = >=3.7
include_package_data = True
